[Home]

Summary:ASTERISK-25375: Bad ao2 pointer on snapshot cleanup after creation
Reporter:Scott Griepentrog (sgriepentrog)Labels:
Date Opened:2015-09-04 09:20:50Date Closed:2017-10-23 03:52:58
Priority:MajorRegression?
Status:Closed/CompleteComponents:
Versions:Frequency of
Occurrence
Related
Issues:
Environment:CentOS 7 VPS with Asterisk 13 current GITAttachments:( 0) backtrace-core.369.txt
Description:In ast_endpoint_snapshot_create(), a failure results in ao2_cleanup of the snapshot object just allocated.  However use of RAII_VAR causes another cleanup on a no longer valid ao2 pointer.
Comments:By: Scott Griepentrog (sgriepentrog) 2015-09-04 09:21:45.500-0500

Attached [^backtrace-core.369.txt]